[package]
name = "pygamer-playground"
version = "0.1.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2021"

[[bin]]
name = "fastlcd"
path = "src/fastlcd.rs"

[[bin]]
name = "blinky_basic"
path = "src/blinky_basic.rs"

[dependencies]
pygamer = { git = "https://github.com/atsamd-rs/atsamd" }
embedded-graphics = "0.7.1"
embedded-hal = "0.2"
panic-halt = "0.2"
tinybmp = "0.3.1"
heapless = "0.7"
bytemuck = "*"

[profile.release]
lto = "fat"
