[package]
name = "pygamer-playground"
version = "0.1.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2021"

[[bin]]
name = "fastlcd"
path = "src/fastlcd.rs"

[[bin]]
name = "joystick"
path = "src/joystick.rs"

[[bin]]
name = "blinky_basic"
path = "src/blinky_basic.rs"

[[bin]]
name = "neopixel_adc_light"
path = "src/neopixel_adc_light.rs"

[[bin]]
name = "neopixel_button"
path = "src/neopixel_button.rs"

[[bin]]
name = "neopixel_tilt"
path = "src/neopixel_tilt.rs"

[dependencies]
pygamer = { git = "https://github.com/atsamd-rs/atsamd" }
bytemuck = "*"
embedded-graphics = "0.7.1"
embedded-hal = "0.2"
heapless = "0.7"
panic-halt = "0.2"
smart-leds = "0.3"
tinybmp = "0.3.1"
ws2812-timer-delay = "0.3"
lis3dh = "0.4"

[profile.release]
lto = "fat"
