[package]
name = "pygamer-playground"
version = "0.1.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2021"

[[bin]]
name = "nomnom"
path = "src/nomnom.rs"

[dependencies]
pygamer = { git = "https://github.com/atsamd-rs/atsamd" }
bytemuck = "*"
embedded-graphics = "0.7.1"
embedded-hal = "0.2"
heapless = "0.7"
panic-halt = "0.2"
smart-leds = "0.3"
tinybmp = "0.3.1"
ws2812-timer-delay = "0.3"
lis3dh = "0.4"
st7735-lcd = "0.8"

[profile.release]
lto = "fat"
